# chitchai

./: Cargo.toml
.github/workflows/: rust.yml
src/: agents.rs  chat.rs  global_states.rs  lib.rs  main.rs  utils.rs
src/components/: chat.rs  left_sidebar.rs  mod.rs  setting_sidebar.rs
src/components/chat/: message_card.rs  request_utils.rs
src/components/left_sidebar/: agent_profiles.rs  chat_history.rs  icons.rs
src/pages/: agents.rs  announcements.rs  app.rs  mod.rs
src/prompt_engineer/: mod.rs  prompt_templates.rs
src/utils/: auth.rs  customization.rs  datetime.rs  settings.rs  storage.rs
src/utils/storage/: conversion.rs  schema.rs
