[package]
name = "chitchai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router"] }
#dioxus = "*"
#dioxus-web = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transprompt = { git = "https://github.com/meta-introspector/transprompt",   branch= "v0.11.0", version = "0.11.0", default-features = false}
#, features = ["wasm"]

console_log = "1.0"
log = "0.4"
gloo-storage = "0.3"
futures = "0.3"
futures-util = "0.3"
async-std = "1.12"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
readonly = "0.2"
dioxus-router = "0.4"
toml = "0.8"
dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown.git", version = "0.3.0-alpha.1" }
#dioxus-markdown = { version = "0.3.0-alpha.1" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4", # Lets you generate random UUIDs
#    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "rng-rand", # Use a faster (but still sufficiently random) RNG
    "serde", # Enables serialization/deserialization of UUIDs
]

[profile.release]
opt-level = "z"
strip = true
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[features]
default = ["web"]
web = ["dioxus/web"]
